fixed overflow for tablets

--- a/css/main.less
+++ b/css/main.less
@@ -463,7 +463,7 @@ footer {
         background: rgba(0,0,0,0.95);
         padding: 30px 20px 20px;
         opacity: 0;
-        overflow: hidden;
+        overflow: auto;
 
         -webkit-transition: all 350ms ease-in-out;
         -moz-transition: all 350ms ease-in-out;
